# kernel-forge

./: .gitignore  CLAUDE.md  README.md  autodev.toml  config.yaml  pyproject.toml
docs/: parameter-golf-integration.md
kernels/: 36_RMSNorm_opt.py
kernels/nvfp4_gemm/: benchmark.py  deploy_and_test.sh  submission_v1_cached_scaledmm.py  submission_v2_triton.py  submission_v3_cublaslt.py  submission_v4_triton_cublas.py
knowledge/: b200_setup.md  baselines_b200.json  kernelbench
knowledge/anti_patterns/: fragility.md  llm_kernel_failures.md  reward_hacks.md
knowledge/cuda_patterns/: cublaslt_nvfp4.md  cutlass_nvfp4.md  fp4_encoding.cu  fused_rmsnorm_quant.cu  online_softmax.cu  shared_memory_tile.cu  triton_dot_scaled.py  vectorized_load.cu  warp_reduction.cu
knowledge/distilled/: attention.md  combined.md  conv.md  elementwise.md  matmul.md  moe.md  norm.md  other.md  pooling.md  reduce.md  softmax.md  tools.md
knowledge/experience/: README.md  records.jsonl
knowledge/learnings/: gotchas.md  insights.md  tool_recipes.md
knowledge/memory/: README.md
problems/: trimul.yaml  vliw_challenge.yaml
scripts/: batch_agent_prompt.md  batch_run.py  distill_knowledge.py  ingest_knowledge.py  run_batch.py  seed_db.py  seed_experience.py  setup_remote.sh  validate_kernel.py
tests/: test_agents.py  test_builtin_tools.py  test_classifier.py  test_cli.py  test_config.py  test_evaluate.py  test_experience.py  test_harness.py  test_knowledge_query.py  test_learnings.py  test_loop.py  test_orchestrate.py  test_runner.py  test_telemetry.py  test_tools.py  test_types.py
(+121 files in other folders)
